--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "gh-pages": "^6.2.0",
+    "http-proxy-middleware": "^3.0.3",
     "intl-tel-input": "^24.6.0",
     "my-app": "file:",
     "react": "^18.3.1",
